syntax = "proto2";

import "scalapb/scalapb.proto";

option (scalapb.options) = {
  package_name: "it.pagopa.interop.purposemanagement.model.persistence.serializer.v1"
  no_default_values_in_constructor : true
};

import "v1/purpose.proto";


message StateV1 {
  repeated PurposesV1 purposes = 1;
}

message PurposesV1 {
  required string key = 1;
  required PurposeV1 value = 2;
}
